# rsapa-backend

./: .env-template  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  local.yml  pyproject.toml
.github/workflows/: build.yml  deploy.yml  setup-docker.yml  setup-envs.yml
alembic/: env.py
alembic/versions/: 000_initial.py  001_avatar_path.py  001_initial.py  001_user_model.py  002_added_permission_models.py  002_added_stripe_subscription_id.py  002_email_index.py  002_linked_payments_and_membership_types.py  002_user_password.py  003_nullable_description.py  003_phone_number.py  003_removed_server_default_stripe_price_id.py  003_types_and_memberships.py  004_contact_message.py  004_linked_payments_and_memberships.py  004_membership_unique_user_id.py  004_protected_password_attr.py  005_added_fields_into_payment.py  005_answered_field_contact_message.py  005_approval_status.py  005_approved_field.py  005_pending_field.py  006_session_lock_fields.py  006_stripe_price_id.py  006_subscription_tables.py  006_updated_field.py  007_end_date_nullable.py  007_news_model.py  008_deleted_field.py  008_refactore_user_membership.py  009_cancel_at_period_end.py  010_latest_invoice_id.py  011_payment_model.py  012_update_payment_model.py  013_payment_user_id.py  014_deleted_filed_for_all_models.py  015_sponsorship_request_table.py  016_last_password_change.py  017_email_confirmed_field.py
app/: main.py  utils.py
app/core/: config.py  request_params.py  responses.py
app/core/common/: cryptographer.py  request_params.py  responses.py
app/core/database/: base_repository.py  mixins.py  setup_db.py  unit_of_work.py
app/core/utils/: filters.py  mail.py  open_api.py  responses.py  save_file.py
app/domains/: filters.py
app/domains/auth/: api.py  database.py  infrastructure.py  models.py  schemas.py  services.py  use_cases.py  utils.py
app/domains/auth/routes/: auth_router.py
app/domains/emails/: services.py
app/domains/emails/common/: abstract_plugin.py  exceptions.py
app/domains/emails/plugins/: gmail_plugin.py
app/domains/feedback/: api.py  filters.py  infrastructure.py  models.py  services.py
app/domains/feedback/routes/: contact_messages_api.py  sponsorship_requests_api.py
app/domains/membership/: api.py  dependencies.py  filters.py  infrastructure.py  models.py  routes.py  schemas.py  services.py  utils.py
app/domains/membership/routes/: admin_api.py  api.py  membership_types_router.py  user_memberships_admin_router.py  user_memberships_router.py
app/domains/membership/utils/: checkout_session_utils.py  common.py  webhook_utils.py
app/domains/memberships/: dependencies.py  filters.py  infrastructure.py  models.py  schemas.py  services.py
app/domains/memberships/routes/: admin_api.py  api.py
app/domains/memberships/utils/: checkout_session_utils.py  common.py
app/domains/news/: api.py  filters.py  infrastructure.py  models.py  services.py
app/domains/payments/: api.py  infrastructure.py  models.py  schemas.py  services.py
app/domains/permissions/: infrastructure.py  models.py  services.py
app/domains/permissions/routes/: permissions_router.py
app/domains/shared/: deps.py  types.py
app/domains/users/: api.py  exceptions.py  infrastructure.py  models.py  repositories.py  schemas.py  services.py  uow.py
app/domains/users/routes/: admin_api.py  api.py
compose/backend/: Dockerfile  entrypoint.sh
compose/nginx/: nginx.conf
compose/postgres/: init.sql
compose/stripe/: Dockerfile  entrypoint.sh
tests/: conftest.py  test_example.py
tests/auth/: conftest.py  test_login.py  test_logout.py  test_refresh_access_token.py  test_register.py  utils.py
tests/fixtures/: auth.py  client.py  database.py  faker.py  uow.py
tests/membership/: conftest.py  test_create_checkout_session.py  test_fulfill_checkout_webhook.py
