[project]
name = "rsapa-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "max31ru12",email = "maxevg72@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "fastapi-exception-responses (>=0.1.3,<0.2.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
pytest = "^8.4.1"
faker = "^37.4.0"
httpx = "^0.28.1"
pre-commit = "^4.2.0"

[tool.ruff]
line-length = 120  # Устанавливаем максимальную длину строки в 120 символов

[tool.ruff.lint]
select = [
    "F",  # flake8 - ошибки переменных (неиспользуемые, неопределенные)
    "I",  # isort - упорядочевание импортов
    "E",  # pycodestyle - ошибки форматирования
    "W",  # pycodestyle - предупреждения о коде
    "B",  # flake8-bugbear потентциальные баги
    "C90", #  ьссфиу - сложность кода
]
ignore = [
    "E501", # PEP8 length > 79
    "B904",
] # ignored rules

[tool.ruff.format]
quote-style = "double"  # Всегда использовать двойные кавычки
indent-style = "space"  # Использовать пробелы вместо табов (tab)
line-ending = "lf"  # Использовать Unix-стиль переносов строк

[tool.ruff.isort]
known-first-party = ["my_project"]  # Эти настройки сортируют импорты
combine-as-imports = true
